make sure text doesn't wrap funny around columned images in HWH edition

--- a/css/style.css
+++ b/css/style.css
@@ -886,12 +886,12 @@ float: right;
 
 .whitmanhydefigureleft {
     width:46%;
-    float:left;
+    float:left; height: 200px;
 }
 
 .whitmanhydefigureright {
     width:46%;
-    float:right;
+    float:right; height: 200px;
 }
 
 .whitmanhydeintro p {
